--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="sBJ-Tr-txo" id="fHX-9h-Pmi"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="7us-3a-AM3"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="7us-3a-AM3">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ml4-Fw-kCa">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="sBJ-Tr-txo" id="XDi-Ay-CaO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F6l-Ry-bXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
